# Mediproof

./: .dockerignore  .env.example  .gitattributes  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  docker-compose.yml  plan.md  pyproject.toml  render.yaml  run.ps1
api/: Dockerfile  README.md  __init__.py  app.py  db.py  service.py
datagen/: README.md  __init__.py  cli.py  fake_data.py  faults.py  regolden.py  render.py  sampler.py
datagen/templates/: _letterhead.html  base.css  base.html  discharge_summary.html  hospital_bill.html  lab_report.html  pharmacy_bill.html  prescription.html
evals/: README.md  RESULTS.md  __init__.py  cli.py  harness.py  report.py
pipeline/: __init__.py  ir.py  orchestrator.py
pipeline/m1_ingest/: README.md  __init__.py  ingest.py
pipeline/m2_segment/: README.md  __init__.py  segment.py
pipeline/m3_extract/: README.md  __init__.py  confidence.py  extract.py  fuse.py  grounding.py  llm_client.py
pipeline/m4_audit/: README.md  __init__.py  audit.py  rules.yaml
pipeline/m5_complete/: README.md  __init__.py  checklists.yaml  complete.py
schemas/: README.md  __init__.py  claim.py  common.py  documents.py  findings.py  ground_truth.py
scripts/: demo_seed.py
tests/: conftest.py
tests/api/: test_app.py
tests/datagen/: test_faults.py  test_render.py  test_sampler.py
tests/evals/: test_harness.py
tests/fixtures/llm/: README.md
tests/golden/datagen/: README.md  claim_seed42.json
tests/pipeline/: test_m1_ingest.py  test_m2_segment.py  test_m3_extract.py  test_m3_fuse.py  test_m3_grounding.py  test_m4_audit.py  test_m5_complete.py
tests/schemas/: test_contracts.py
ui/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
ui/src/: App.tsx  ReviewApp.tsx  SubmitApp.tsx  api.ts  lib.test.ts  lib.ts  main.tsx  types.ts
